add basic and label tests